Search note title only when inserting internal link
